cp project/force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <description>Payment receipts subject to Finance approval and 4 Rules of Money.</description>
    <label>Receipt</label>
    <nameField>
        <displayFormat>REC-{0000}</displayFormat>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>