cp project/force-app/main/default/objects/Receipt__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Receipts</relationshipLabel>
    <relationshipName>Approved_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>