cp project/force-app/main/default/objects/Receipt__c/fields/Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Status__c</fullName>
    <description>Approval lifecycle status for payment receipt.</description>
    <label>Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>