cp project/force-app/main/default/objects/Receipt__c/fields/Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference__c</fullName>
    <label>Transaction Reference</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>