cp project/force-app/main/default/objects/Receipt__c/validationRules/Approved_Receipt_Immutable.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Receipt_Immutable</fullName>
    <active>true</active>
    <description>An approved receipt is the official ledger record and cannot be reused.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISPICKVAL(PRIORVALUE(Receipt_Status__c), &quot;Approved&quot;))</errorConditionFormula>
    <errorMessage>Approved receipts cannot be edited or reused.</errorMessage>
</ValidationRule>