cp project/force-app/main/default/objects/Receipt__c/validationRules/Approved_Receipt_Must_Reference_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Receipt_Must_Reference_Payment</fullName>
    <active>true</active>
    <description>Approved receipt must reference a valid Payment record.</description>
    <errorConditionFormula>AND(ISPICKVAL(Receipt_Status__c, &quot;Approved&quot;), ISBLANK(Payment__c))</errorConditionFormula>
    <errorMessage>Approved receipt must reference a valid Payment record.</errorMessage>
</ValidationRule>