cp project/force-app/main/default/objects/Receipt__c/validationRules/Receipt_Amount_Must_Be_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Receipt_Amount_Must_Be_Non_Negative</fullName>
    <active>true</active>
    <description>Protects the receipt ledger from negative values.</description>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Receipt amount cannot be negative.</errorMessage>
</ValidationRule>