cp project/force-app/main/default/objects/Receipt__c/validationRules/Rejected_Receipt_Cannot_Be_Reused.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Receipt_Cannot_Be_Reused</fullName>
    <active>true</active>
    <description>Rule of Money Violation: Rejected receipts are dead records and cannot be reused or reactivated.</description>
    <errorConditionFormula>AND(PRIORVALUE(Receipt_Status__c) = &quot;Rejected&quot;, ISCHANGED(Receipt_Status__c))</errorConditionFormula>
    <errorMessage>Rule of Money Violation: Rejected receipts are dead records and cannot be reused or reactivated.</errorMessage>
</ValidationRule>