cp project/force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>Amount__c</columns>
    <columns>Receipt_Date__c</columns>
    <columns>Receipt_Status__c</columns>
    <columns>Transaction_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>